--- a/src/app/showcase/components/datatable/datatablerowexpansiondemo.html
+++ b/src/app/showcase/components/datatable/datatablerowexpansiondemo.html
@@ -8,7 +8,9 @@
 </div>
 
 <div class="content-section implementation">
-    <p-dataTable [value]="cars" expandableRows="true">
+    <button type="button" pButton icon="fa-file-o" iconPos="left" label="All Data" (click)="dt.exportCSV()" style="float:left"></button>
+<br/>
+    <p-dataTable  #dt [value]="cars" expandableRows="true">
         <p-column expander="true" styleClass="col-icon"></p-column>
         <p-column field="vin" header="Vin"></p-column>
         <p-column field="year" header="Year"></p-column>
